# datafusion-sqlparser-rs

./: .asf.yaml  .gitignore  .tool-versions  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HEADER  README.md  SECURITY.md  build.rs  dependabot.yml  rat_exclude_files.txt  rustfmt.toml  sql.sql  t.sql  test.sql
.github/: dependabot.yml
.github/actions/setup-builder/: action.yaml
.github/actions/setup-rust-runtime/: action.yaml
.github/workflows/: audit.yml  license.yml  rust.yml  semgrep.yml  stale.yml  test.yml
.run/: clippy [sqlparser-rs].run.xml  fmt [sqlparser-rs].run.xml  nextest [sqlparser-rs].run.xml
benches/: sqlparser_bench.rs
changelog/: 0.51.0-pre.md  0.52.0.md  0.53.0.md  0.54.0.md  0.55.0.md  0.56.0.md  0.57.0.md  0.58.0.md  0.59.0.md  0.60.0.md  0.61.0.md  0.62.0.md  0.63.0.md
derive/: Cargo.toml  LICENSE.TXT  README.md
derive/src/: dialect.rs  lib.rs  visit.rs
dev/release/: README.md  create-tarball.sh  generate-changelog.py  rat_exclude_files.txt  release-tarball.sh  verify-release-candidate.sh
docs/: benchmarking.md  custom_sql_parser.md  fuzzing.md  releasing.md  source_spans.md
examples/: acme_parser.rs  cli.rs  parse_mssql.rs  parse_select.rs  parse_select_prepare.rs  parse_sql.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_sql.rs  parse_sql.rs
procmacro/: Cargo.toml
procmacro/src/: lib.rs
sqlparser_bench/: Cargo.toml  README.md
sqlparser_bench/benches/: sqlparser_bench.rs  tokenize_bench.rs
src/: .sqlparser.rs.swo  annotate.rs  builder.rs  cst.rs  dialect.rs  display_utils.rs  generic_tokenizer.rs  keywords.rs  keywords.txt  lib.rs  location.rs  parser.rs  prelude.rs  span.rs  sqlast.rs  sqlparser.rs  sqltokenizer.rs  test_dialect_utils.rs  test_utils.rs  tokenizer.rs
src/ansi/: mod.rs  parser.rs  tokenizer.rs
src/ast/: comments.rs  cypher.rs  data_type.rs  dcl.rs  ddl.rs  dml.rs  helpers.rs  mod.rs  operator.rs  operator_classes.rs  query.rs  spans.rs  statement_from_impls.rs  table_constraints.rs  to_sql.rs  trigger.rs  value.rs  visit.rs  visitor.rs
src/ast/expression/: display.rs  mod.rs
src/ast/helpers/: attached_token.rs  desugar_cypher.rs  ignore_field.rs  key_value_options.rs  mod.rs  stmt_create_database.rs  stmt_create_table.rs  stmt_data_loading.rs
src/ast/statement/: display.rs  mod.rs
src/ast/table_constraints/: check_constraint.rs  foreign_key_constraint.rs  full_text_or_spatial_constraint.rs  index_constraint.rs  mod.rs  primary_key_constraint.rs  unique_constraint.rs
src/dialect/: ansi.rs  ansi_sql.rs  bigquery.rs  clickhouse.rs  cypher.rs  databricks.rs  doris.rs  duckdb.rs  generic.rs  generic_sql.rs  hive.rs  keywords.rs  mod.rs  mssql.rs  mysql.rs  oracle.rs  postgresql.rs  redshift.rs  snowflake.rs  spark.rs  sqlite.rs  teradata.rs
src/parser/: alter.rs  analyze.rs  assert.rs  assignment.rs  attach.rs  cache.rs  call.rs  close.rs  columns.rs  comment.rs  commit.rs  copy.rs  create.rs  ddl.rs  deallocate.rs  declare.rs  delete.rs  discard.rs  dml.rs  dql.rs  drop.rs  end.rs  execute.rs  explain.rs  expr.rs  fetch.rs  flush.rs  grant.rs  identifier.rs  insert.rs  install.rs  keyword.rs  kill.rs  listen.rs  lists.rs  load.rs  macros.rs  merge.rs  mod.rs  msck.rs  (+26 more)
src/parser/dialects/: bigquery.rs  clickhouse.rs  duckdb.rs  hive.rs  mod.rs  mssql.rs  postgresql.rs  snowflake.rs  sqlite.rs  utils.rs
src/sqlast/: ddl.rs  mod.rs  query.rs  sql_operator.rs  sqltype.rs  table_key.rs  value.rs  visit.rs
src/sqlparser/: tests.rs
src/tokenizer/: mod.rs
tests/: pretty_print.rs  sqlparser.rs  sqlparser_ansi.rs  sqlparser_bigquery.rs  sqlparser_clickhouse.rs  sqlparser_comments.rs  sqlparser_common.rs  sqlparser_custom_dialect.rs  sqlparser_cypher.rs  sqlparser_databricks.rs  sqlparser_derive_dialect.rs  sqlparser_doris.rs  sqlparser_duckdb.rs  sqlparser_generic.rs  sqlparser_hive.rs  sqlparser_mssql.rs  sqlparser_mysql.rs  sqlparser_oracle.rs  sqlparser_postgres.rs  sqlparser_redshift.rs  sqlparser_regression.rs  sqlparser_sigma.rs  sqlparser_snowflake.rs  sqlparser_spark.rs  sqlparser_sqlite.rs  sqlparser_teradata.rs  sqlparser_visitor.rs  sqpparser_clickhouse.rs  test_formatting.rs  test_utils.rs
tests/dialect/: mod.rs  sqlparser_common.rs  sqlparser_custom_dialect.rs  sqlparser_databricks.rs  sqlparser_duckdb.rs  sqlparser_hive.rs  sqlparser_mysql.rs  sqlparser_snowflake.rs  sqlparser_sqlite.rs
tests/macros/: mod.rs
tests/queries/bigquery/: wildcard_modifiers_except.sql
tests/queries/snowflake/: wildcard_modifiers_exclude.sql  wildcard_modifiers_replace.sql
tests/queries/tpch/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  23.sql  24.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
tests/test_utils/: extend_tuple.rs  mod.rs
util/: ast-fields.tsv  ast-stats.js  test-data.js
