[package]
name = "sqlgen"
description = "SQL Lexer, Parser, AST, and Dialect-Aware SQL Generator"
version = "0.1.0"
authors = ["Jon Mease <jonmmease@gmail.com>"]
homepage = "https://github.com/vegafusion/sqlgen-rs"
keywords = [ "ansi", "sql", "lexer", "parser" ]
repository = "https://github.com/vegafusion/sqlgen-rs"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"

[lib]
name = "sqlgen"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
# Enable JSON output in the `cli` example:
json_example = ["serde_json", "serde"]

[dependencies]
bigdecimal = { version = "0.3", features = ["serde"], optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json is only used in examples/cli, but we have to put it outside
# of dev-dependencies because of
# https://github.com/rust-lang/cargo/issues/1596
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
simple_logger = "2.1"
matches = "0.1"
pretty_assertions = "1"

[package.metadata.release]
# Instruct `cargo release` to not run `cargo publish` locally:
# https://github.com/sunng87/cargo-release/blob/master/docs/reference.md#config-fields
# See docs/releasing.md for details.
disable-publish = true
