[package]
name = "sqlparser_bench"
version = "0.1.0"
authors = ["Dandandan <danielheres@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { path = "../", version = "0.5.1-alpha-0" }

[dev-dependencies]
criterion = {version = "0.3"}

[[bench]]
name = "sqlparser_bench"
harness = false
